Bug 738243 - "Need an account?" link for YouSendIt in Filelink account setup dialog is misaligned. r+ui-r=bwinton.

--- a/mail/themes/qute/mail/preferences/preferences.css
+++ b/mail/themes/qute/mail/preferences/preferences.css
@@ -198,6 +198,10 @@ a {
   max-height: 16px;
 }
 
+#provider-settings .indented {
+  margin-left: 150px;
+}
+
 #provider-header {
   border-bottom: 1px solid #898c95;
   margin-bottom: 20px;
